kubernetes/apps/default/nextcloud/app/coturn.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coturn
  labels:
    app: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coturn
  template:
    metadata:
      labels:
        app: coturn
    spec:
      containers:
        - name: coturn
          image: coturn/coturn:4.6
          args:
            - -n
            - --log-file=stdout
            - --listening-port=3478
            - --tls-listening-port=5349
            - --min-port=49152
            - --max-port=49252
            - --use-auth-secret
            - --static-auth-secret=$(TURN_SECRET)
            - --realm=gurzil.org
            - --external-ip=89.87.198.46/192.168.1.204
            - --no-cli
            - --no-multicast-peers
            - --no-tlsv1
            - --no-tlsv1_1
          ports:
            - name: turn-udp
              containerPort: 3478
              protocol: UDP
            - name: turn-tcp
              containerPort: 3478
              protocol: TCP
            - name: turn-tls
              containerPort: 5349
              protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: coturn
  annotations:
    lbipam.cilium.io/ips: "192.168.1.204"
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: coturn
  ports:
    - name: turn-udp
      port: 3478
      targetPort: 3478
      protocol: UDP
    - name: turn-tcp
      port: 3478
      targetPort: 3478
      protocol: TCP
    - name: turn-tls
      port: 5349
      targetPort: 5349
      protocol: TCP
