kubernetes/apps/default/nextcloud/app/postgresql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-postgresql
spec:
  serviceName: nextcloud-postgresql
  replicas: 1
  selector:
    matchLabels:
      app: nextcloud-postgresql
  template:
    metadata:
      labels:
        app: nextcloud-postgresql
    spec:
      containers:
        - name: postgresql
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgresql
spec:
  selector:
    app: nextcloud-postgresql
  ports:
    - port: 5432
      targetPort: 5432
  clusterIP: None
